# dataverse-importer

./: .env  Dockerfile  README.md  docker-compose.yaml  dot_env_example  pyproject.toml
.github/workflows/: docker-image.yml  image.yml
src/: main.py
src/schema/: input.py
