[tool.poetry]
name = "dataverse-importer"
version = "0.1.1"
description = "A project allowing one to set up a FastAPI based Microservice, using cookiecutter"
authors = ["Fjodor van Rijsselberg"]

[tool.poetry.dependencies]
python = "^3.11.6"
uvicorn = "^0.24.0"
pydantic = "^2.5.1"
fastapi = "^0.104.1"
pytest = "^7.1.3"
requests = "^2.28.1"
pyDataverse = "^0.3.1"
tomli = "^2.0.1"
python-multipart = "^0.0.17"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^23.11.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
